--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-ode_modules/
+node_modules/
 dist/
 build/
 .env
 *.log
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+ENV/
+.venv/
+.vscode/
+.idea/
+.expo/
+web-build/
+.DS_Store
+Thumbs.db
+
